# zephyr-nix-templates

./: .gitignore  README.md  flake.nix
quick-start/: .gitignore  Justfile  README.md  flake.nix
quick-start/app/: CMakeLists.txt  prj.conf  west.yml
quick-start/app/src/: main.c
quick-start/pkgs/: default.nix
quick-start/pkgs/openocd-cubeide/: default.nix
